fix: Properly truncate long links in the frontend
Fixes #128

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -79,10 +79,15 @@ a {
   max-height: 4.5em;
   line-height: 1.5em;
   word-break: break-word;
-  overflow: auto;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .chhoto-table tr td[label="Long URL"] div {
   word-break: break-all;
+  color: light-dark(blue, #3391ff);
 }
 .chhoto-table tr td[name="numColumn"] div {
   word-break: normal;
